# aiiinotate-benchmark

./: .env.aiiinotate.template  .gitignore  .gitmodules  LICENSE  README.md  main.py  outtakes.md  pyproject.toml  requirements.txt  run_aiiinotate.sh  run_sas.sh  setup.sh  test.sh  visualize.py
aiiinotate/: .gitignore  package-lock.json  package.json
data/: iiif_presentation_2_annotation.jsonld  iiif_presentation_2_canvas.jsonld  iiif_presentation_2_manifest.jsonld  iiif_presentation_2_manifest_vhs_wit253_man253_anno253_anno-24.json
docs/: methodology.md
scripts/: setup_mongodb.sh  setup_node.sh
src/: adapter_aiiinotate.py  adapter_core.py  adapter_sas.py  benchmark.py  constants.py  data_generator.py  generate.py  mongosh.py  multithread.py  runner.py  utils.py  visualize.py
