[project]
name = "aiiinotate-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "dotenv>=0.9.9",
    "idna==3.11",
    "requests==2.32.5",
    "tqdm==4.67.1",
    "urllib3==2.5.0",
]
